new qt-based gvedit

--- a/cmd/gvedit/gvedit.vcproj
+++ b/cmd/gvedit/gvedit.vcproj
@@ -201,6 +201,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\ui\settings.ui"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
