various macos snowleopard changes to make it work for me

--- a/macosx/prebuild/.cvsignore
+++ b/macosx/prebuild/.cvsignore
@@ -1,3 +1,5 @@
+autoconf-*
+automake-*
 atk-*
 cairo-*
 fontconfig-*
@@ -10,6 +12,7 @@ gts-*
 libXft-*
 libiconv-*
 libpng-*
+libtool-*
 jpeg*
 pango-*
 pixman-*
