--- a/macosx/prebuild/Makefile-packages.incl
+++ b/macosx/prebuild/Makefile-packages.incl
@@ -1,3 +1,6 @@
+AUTOCONF_URL=http://ftp.gnu.org/gnu/autoconf/autoconf-2.68.tar.gz
+AUTOMAKE_URL=http://ftp.gnu.org/gnu/automake/automake-1.11.tar.gz
+LIBTOOL_URL=http://ftp.gnu.org/gnu/libtool/libtool-2.2.8.tar.gz
 PKGCONFIG_URL=http://pkgconfig.freedesktop.org/releases/pkg-config-0.25.tar.gz
 PNG_URL=http://downloads.sourceforge.net/libpng/libpng-1.5.0.tar.gz
 FREETYPE_URL=http://download.savannah.gnu.org/releases-noredirect/freetype/freetype-2.4.4.tar.gz
@@ -16,4 +19,3 @@ TIFF_URL=ftp://ftp.remotesensing.org/pub/libtiff/tiff-4.0.0beta6.tar.gz
 JPEG_URL=http://www.ijg.org/files/jpegsrc.v8b.tar.gz
 LIBICONV_URL=http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.13.tar.gz
 LIBXML2_URL=ftp://xmlsoft.org/libxml2/libxml2-2.7.8.tar.gz
-
