--- a/lib/sparse/Makefile.am
+++ b/lib/sparse/Makefile.am
@@ -5,9 +5,9 @@ AM_CPPFLAGS = \
         -I$(top_srcdir) \
 	-I$(top_srcdir)/lib/common 
 
-noinst_HEADERS = SparseMatrix.h
+noinst_HEADERS = SparseMatrix.h general.h BinaryHeap.h IntStack.h
 noinst_LTLIBRARIES = libsparse_C.la
 
-libsparse_C_la_SOURCES = SparseMatrix.c
+libsparse_C_la_SOURCES = SparseMatrix.c general.c BinaryHeap.c IntStack.c
 
 EXTRA_DIST = Makefile.old gvsparse.vcproj
